[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Visual/iconos/iconMale.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/MPLUSRounded/MPLUSRounded1c-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/fonts/nunito/Nunito-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Visual/logo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Visual/botones/whitecircle.png" type="Texture" id=5]
[ext_resource path="res://Assets/background/background cyan.png" type="Texture" id=6]
[ext_resource path="res://Assets/Visual/botones/large.png" type="Texture" id=7]
[ext_resource path="res://Assets/Visual/iconos/iconFemale.png" type="Texture" id=8]
[ext_resource path="res://Scrips/UI/studenDateinfo.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 27
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.533333, 0.686275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.270588, 0.968627, 0.854902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=19]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0.533333, 0.686275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.270588, 0.968627, 0.854902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=20]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0.533333, 0.686275, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.270588, 0.968627, 0.854902, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=8]
size = 45
outline_size = 1
outline_color = Color( 0.309804, 0.309804, 0.309804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1536, 1024 )

[node name="OnboardingStudentInfo2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="logo" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -143.0
margin_top = 21.0
margin_right = -9.0
margin_bottom = 155.0
rect_min_size = Vector2( 95, 95 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_right = -669.0
margin_bottom = 85.0
rect_min_size = Vector2( 50, 50 )
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "Algunos datos sobre el alumno"

[node name="CenterVBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -580.0
margin_top = -360.0
margin_right = 580.0
margin_bottom = 360.0
custom_constants/separation = 2
alignment = 1

[node name="ContentHBox" type="HBoxContainer" parent="CenterVBox"]
margin_top = 186.0
margin_right = 1160.0
margin_bottom = 534.0
custom_constants/separation = 120
alignment = 1

[node name="GenderVBox" type="VBoxContainer" parent="CenterVBox/ContentHBox"]
margin_left = 89.0
margin_right = 593.0
margin_bottom = 348.0
custom_constants/separation = 32

[node name="GenderQuestionLabel" type="Label" parent="CenterVBox/ContentHBox/GenderVBox"]
margin_right = 504.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 10 )
text = "¿Tú eres...?"
align = 1

[node name="GenderOptionsHBox" type="HBoxContainer" parent="CenterVBox/ContentHBox/GenderVBox"]
margin_top = 82.0
margin_right = 504.0
margin_bottom = 348.0
custom_constants/separation = 64

[node name="GirlVBox" type="VBoxContainer" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox"]
margin_right = 220.0
margin_bottom = 266.0

[node name="GirlButton" type="Button" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox/GirlVBox"]
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 220, 220 )
custom_styles/normal = SubResource( 11 )

[node name="GirlIcon" type="TextureRect" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox/GirlVBox/GirlButton"]
margin_left = 6.0
margin_top = -2.0
margin_right = 211.0
margin_bottom = 223.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="GirlLabel" type="Label" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox/GirlVBox"]
margin_top = 224.0
margin_right = 220.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 12 )
text = "Niña"
align = 1

[node name="boyVBox" type="VBoxContainer" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox"]
margin_left = 284.0
margin_right = 504.0
margin_bottom = 266.0

[node name="boyButton" type="Button" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox/boyVBox"]
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 220, 220 )
custom_styles/normal = SubResource( 11 )

[node name="boyIcon" type="TextureRect" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox/boyVBox/boyButton"]
margin_left = 6.0
margin_top = -2.0
margin_right = 211.0
margin_bottom = 223.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="boyLabel" type="Label" parent="CenterVBox/ContentHBox/GenderVBox/GenderOptionsHBox/boyVBox"]
margin_top = 224.0
margin_right = 220.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 12 )
text = "Niño"
align = 1

[node name="BirthVBox" type="VBoxContainer" parent="CenterVBox/ContentHBox"]
margin_left = 713.0
margin_right = 1071.0
margin_bottom = 348.0
custom_constants/separation = 24

[node name="Label" type="Label" parent="CenterVBox/ContentHBox/BirthVBox"]
margin_right = 358.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 13 )
text = "¿En qué año naciste?"

[node name="DatePanel" type="Panel" parent="CenterVBox/ContentHBox/BirthVBox"]
margin_top = 74.0
margin_right = 358.0
margin_bottom = 74.0

[node name="DateVBox" type="VBoxContainer" parent="CenterVBox/ContentHBox/BirthVBox/DatePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16

[node name="SelectedDateLabel" type="Label" parent="CenterVBox/ContentHBox/BirthVBox/DatePanel/DateVBox"]
margin_right = 404.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 14 )
text = "Selecciona tu fecha"
align = 1

[node name="DateSelectorsHBox" type="HBoxContainer" parent="CenterVBox/ContentHBox/BirthVBox/DatePanel/DateVBox"]
margin_top = 54.0
margin_right = 404.0
margin_bottom = 94.0
custom_constants/separation = 12
alignment = 1

[node name="DayOption" type="OptionButton" parent="CenterVBox/ContentHBox/BirthVBox/DatePanel/DateVBox/DateSelectorsHBox"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_colors/font_color_disabled = Color( 0.482353, 0.482353, 0.482353, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 15 )
text = "Dia"

[node name="MonthOption" type="OptionButton" parent="CenterVBox/ContentHBox/BirthVBox/DatePanel/DateVBox/DateSelectorsHBox"]
margin_left = 132.0
margin_right = 272.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 0 )
custom_colors/font_color_disabled = Color( 0.619608, 0.619608, 0.619608, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/normal = SubResource( 16 )
text = "Mes"

[node name="YearOption" type="OptionButton" parent="CenterVBox/ContentHBox/BirthVBox/DatePanel/DateVBox/DateSelectorsHBox"]
margin_left = 284.0
margin_right = 404.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color_disabled = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 17 )
text = "Año"

[node name="RegistrarButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -917.0
margin_top = -272.0
margin_right = -371.0
margin_bottom = 67.0
rect_min_size = Vector2( 380, 120 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Continuar"

[node name="Steps" type="VBoxContainer" parent="."]
margin_top = 265.0
margin_right = 36.0
margin_bottom = 431.0

[node name="step1" type="TextureRect" parent="Steps"]
margin_right = 36.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true

[node name="step2" type="TextureRect" parent="Steps"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 64.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true

[node name="step3" type="TextureRect" parent="Steps"]
margin_top = 68.0
margin_right = 36.0
margin_bottom = 98.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true

[node name="step4" type="TextureRect" parent="Steps"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 102.0
margin_right = 36.0
margin_bottom = 132.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true

[node name="step5" type="TextureRect" parent="Steps"]
margin_top = 136.0
margin_right = 36.0
margin_bottom = 166.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true
